--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "simple-fetch-api": "^2.2.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@types/node": "^25.0.9",
     "@types/react": "^19.2.8",
     "@typescript-eslint/eslint-plugin": "^8.53.0",
@@ -81,7 +82,8 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "tsup": "^8.5.1",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.53.0"
   },
   "engines": {
     "node": ">=16.0.0",
